#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-14
2015-12-15 Mikhail S. Dubrovin
- AreaDetector.py add returning geometry object method, add ex_cspad_quads_data.py (PSAS-139)

Tag: V00-03-13
2015-12-14 Mikhail S. Dubrovin
- app/det_ndarr_average - evaluate and save ndarray for max value, 
- ex_all_dets.py - add examples for non-complete data of MecTragetChamber
- PyDataAccess.py - add support for Epix.ElementV3 and Epix.Config100aV2 (PSAS-147)
	
Tag: V00-03-12
2015-12-09 Mikhail S. Dubrovin
- PyDetectorAccess.raw_data_cspad - fix cspad ndarray reconstruction in case of missing quads, like in MecTargetChamber.0:Cspad.0 (PSAS-139)
	
Tag: V00-03-11
2015-12-09 Mikhail S. Dubrovin
- in PyDetectorAccess.py, AreaDetector.py rename methods gain_map to gain_mask, inverse results for low/high gain pixels (PSAS-139)

Tag: V00-03-10
2015-12-08 Mikhail S. Dubrovin
- PyDetectorAccess.py, AreaDetector.py - add gain_map evaluation method using configuration (PSAS-139)
- add examples ex_cspad_gain_map.py, expyda_cspad_gain_map.py
	
Tag: V00-03-09
2015-12-04 Mikhail S. Dubrovin
- PyDataAccess, PyDetectorAccess.py, ex_new_dets - add support for Fccd, Timepix, Fli, Pimax (PSAS-139)

Tag: V00-03-08
2015-12-03 Mikhail S. Dubrovin
- add Igor's script app/find_runs_for_data_type
- add data/copy_part_of_xtc_file.cfg
- DetectorAccess - fix memory leak issue (PSAS-139)
	
Tag: V00-03-07
2015-11-17 Mikhail S. Dubrovin
- update documentation for AreaDetector, WFDetector, PyDetector
	
Tag: V00-03-06
2015-11-16 Mikhail S. Dubrovin
- PyDetector - restore and update documentation for sphinx, restore optional test, which were deleted/broken in rev.10938
